CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-16 09:45:35
+lastsearch = 2024-07-16 14:34:29
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = TIN TÔN GIÁO, CHIỀU THỨ HAI 15/07/2024
 url = https://www.youtube.com/watch?v=CW1lWW6yhOQ
 
 [books.google.com]
-match = -150.0%%
-title = American Soap Journal and Manufacturing Chemist
-url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9EcG6BC2&sig=ACfU3U0577XtNQJxh9omR10GEuuO83XV_Q&hl=en&sa=X&ved=2ahUKEwjSjoX4rqqHAxVkKEQIHVEoDX0Q6AF6BAgeEAM
+match = -218.8%%
+title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHabzN7hyg&sig=ACfU3U31YzAMiGG62gPQ1Q0XDRSq77M42w&hl=en&sa=X&ved=2ahUKEwjqk_-BhquHAxUeFFkFHYGWCSwQ6AF6BAgfEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
@@ -132,9 +132,9 @@ title = Dự báo thời tiết TP.HCM ngày 16/7: Mưa dông về chiều ...
 url = https://vtcnews.vn/du-bao-thoi-tiet-tp-hcm-ngay-16-7-mua-dong-ve-chieu-nhiet-do-giam-ar883459.html
 
 [vietstock.vn]
-match = -212.5%%
-title = Theo dấu dòng tiền cá mập 15/07: Tự doanh và khối ngoại ...
-url = https://vietstock.vn/2024/07/theo-dau-dong-tien-ca-map-1507-tu-doanh-va-khoi-ngoai-giao-dich-nguoc-chieu-o-nhieu-ma-830-1207689.htm
+match = -218.8%%
+title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-585-1207761.htm
 
 [www.dcine.vn]
 match = 20.0%%
@@ -382,9 +382,9 @@ title = Hanoi ZIP code - The most updated Hanoi postal codes
 url = https://phaata.com/en/zip-code/hanoi-zip-code-the-most-updated-hanoi-postal-codes-1014.html
 
 [hanoimoi.vn]
-match = -200.0%%
-title = Thua đậm Indonesia, Việt Nam xếp thứ tư giải vô địch U16 ...
-url = https://hanoimoi.vn/thua-dam-indonesia-viet-nam-xep-thu-tu-giai-vo-dich-u16-dong-nam-a-671101.html
+match = -212.5%%
+title = 16h hôm nay 16-7, m ở cửa xả đáy thứ hai hồ thủy điện ...
+url = https://hanoimoi.vn/16h-hom-nay-16-7-m-o-cua-xa-day-thu-hai-ho-thuy-dien-hoa-binh-672188.html
 
 [caobangtv.vn]
 match = -193.8%%
