--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-07-16 10:38:17
+lastsearch = 2024-07-16 14:29:51
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -62,9 +62,9 @@ title = Chiếu trúc 1m5x1m9 hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc 1m5x1m9
 
 [books.google.com]
-match = -116.7%%
-title = Vietnamese Picture Dictionary: Learn 1,500 Vietnamese Words ...
-url = https://books.google.com/books?id=93eSDwAAQBAJ&pg=PA94&lpg=PA94&dq=chieu+truc+cong+ty+16+19&source=bl&ots=h_c7OyPeGd&sig=ACfU3U06KgkF_xTVFs6vBHpCOHrL_EKX1g&hl=en&sa=X&ved=2ahUKEwj-9aey-uKGAxWsIDQIHSRRAJIQ6AF6BAghEAM
+match = -62.5%%
+title = DK Eyewitness Travel Guide: Vietnam and Angkor Wat
+url = https://books.google.com/books?id=vf0XbgeD1bIC&pg=PA301&lpg=PA301&dq=chieu+truc+cong+ty+16+19&source=bl&ots=eq-Ywh4wy9&sig=ACfU3U2hADBGzM0nWZyvHgsw6SMjXKDhMQ&hl=en&sa=X&ved=2ahUKEwiM6uP9hKuHAxUZGFkFHUJEAisQ6AF6BAgcEAM
 
 [thacoansuonghcm.com]
 match = -41.7%%
@@ -140,4 +140,39 @@ url = https://www.customs.gov.vn/index.jsp?pageId=3521
 match = -100.0%%
 title = trực tiếp bóng đá hagl|Casino Online Uy Tín Châu Á - Catalog
 url = https://www.cokecatalog.com/trực_tiếp_bóng_đá_hagl.xhtml
+
+[dichvu.vtvcab.vn]
+match = 4.2%%
+title = VTVcab - Truyền hình Cáp Việt Nam
+url = https://dichvu.vtvcab.vn/
+
+[www.isonicinternational.com]
+match = -250.0%%
+title = iSONIC
+url = https://www.isonicinternational.com/home/
+
+[static2.vietstock.vn]
+match = 4.2%%
+title = CONG TY CO PHAN CHIEU XA AN ...
+url = http://static2.vietstock.vn/data/HOSE/2015/BCTC/VN/QUY 2/APC_Baocaotaichinh_Q2_2015_Hopnhat.pdf
+
+[btmc.vn]
+match = -100.0%%
+title = Công ty TNHH Bảo Tín Minh Châu - BTMC.VN - Giá vàng, Gia ...
+url = https://btmc.vn/
+
+[quochoi.vn]
+match = 4.2%%
+title = Cổng thông tin điện tử Quốc Hội
+url = https://quochoi.vn/
+
+[www.vms-south.vn]
+match = -41.7%%
+title = Ba Ria - Tiling Tau, ngay.25 thong 01 nom 2015
+url = https://www.vms-south.vn/wp-content/uploads/2015/02/05-TBHH-TCTBDATHHMN.pdf
+
+[www.vieclamtot.com]
+match = -70.8%%
+title = Việc Làm Bảo Vệ Ca Đêm Mới Nhất 2024 | Vieclamtot
+url = https://www.vieclamtot.com/tags/bao-ve-ca-dem
 
