--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-16 14:17:44
+lastsearch = 2024-07-16 14:30:44
 
 [www.tiktok.com]
-match = -75.0%%
-title = As Warm As Fire Final Episode Ending
-url = https://www.tiktok.com/discover/as-warm-as-fire-final-episode-ending
+match = -243.8%%
+title = #beautytok #fauxfiltercolorcorrector #colorcorrection @Huda ...
+url = https://www.tiktok.com/@hudabeauty/video/7349654926324419886
 
 [digitalmaine.com]
 match = -75.0%%
@@ -32,9 +32,9 @@ title = Nhu shop | Binh Dinh
 url = https://m.facebook.com/p/Nhu-shop-100036848391375/?locale=is_IS
 
 [www.diepxuan.com]
-match = -150.0%%
-title = Điệp Xuân Nệm bông - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-bong.html?p=2
+match = 18.8%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [diepxuan.com]
 match = 6.2%%
