--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-16 13:50:08
+lastsearch = 2024-07-16 14:30:56
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -12,9 +12,9 @@ title = CHIẾU TRÚC TĂM H&T CÂY
 url = https://chieutrucsaigon.com/chieu-truc-tam/
 
 [shopee.vn]
-match = -6.7%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -106.7%%
+title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
+url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
 
 [chieutruc.info]
 match = -126.7%%
@@ -22,9 +22,9 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -20.0%%
-title = Bóng Bulb HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/bong-bulb-htlight
+match = -40.0%%
+title = Đèn nhà xưởng HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-nha-xuong-htlight
 
 [www.htlightlevel.vn]
 match = -206.7%%
@@ -117,7 +117,7 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [congnghehoangtien.com]
-match = -160.0%%
-title = Đèn năng lượng mặt trời chiếu sáng 24 LED HT-SL23
-url = https://congnghehoangtien.com/san-pham/den-nang-luong-mat-troi-chieu-sang-24-led-ht-sl23/
+match = -133.3%%
+title = Đèn Led Năng Lượng Mặt Trời Sân Vườn HT-SL10
+url = https://congnghehoangtien.com/san-pham/den-led-nang-luong-mat-troi-san-vuon-ht-sl10/
 
