--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-16 04:19:59
+lastsearch = 2024-07-16 14:27:20
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -62,14 +62,14 @@ title = Top 16 game Idle trên điện thoại Android, iOS hay nhất
 url = https://www.thegioididong.com/game-app/top-16-game-idle-tren-dien-thoai-android-ios-hay-nhat-khong-the-bo-1334353
 
 [vnexpress.net]
-match = -131.2%%
-title = Cảnh sát 'bó tay' vì không thể phạt xe tự lái
-url = https://vnexpress.net/canh-sat-bo-tay-vi-khong-the-phat-xe-tu-lai-4766348.html
+match = -50.0%%
+title = Nổ khí gas, 7 người bị thương
+url = https://vnexpress.net/no-khi-gas-7-nguoi-bi-thuong-4770510.html
 
 [laodong.vn]
-match = -206.2%%
-title = Vụ xe khách bị vùi lấp ở Hà Giang: Số người chết là 11 do ...
-url = https://laodong.vn/xa-hoi/vu-xe-khach-bi-vui-lap-o-ha-giang-so-nguoi-chet-la-11-do-1-nguoi-xuong-doc-duong-truoc-tai-nan-1366032.ldo
+match = -187.5%%
+title = Cụ ông 82 tuổi đi xe máy tử vong sau tai nạn với xe tải
+url = https://laodong.vn/xa-hoi/cu-ong-82-tuoi-di-xe-may-tu-vong-sau-tai-nan-voi-xe-tai-1366911.ldo
 
 [olm.vn]
 match = -143.8%%
@@ -127,9 +127,9 @@ title = 2024 0625 69vn|ba sòng bạc hàng đầu châu á - AptoideV3.1.4
 url = https://www.sjcallahabad.org/tig/2024-0625-69vn.phtml
 
 [znews.vn]
-match = -68.8%%
-title = Suti tuổi 16 cao vượt bố - Giải trí
-url = https://znews.vn/suti-tuoi-16-cao-vuot-bo-post1486129.html
+match = -175.0%%
+title = 3 người thoát nạn trong vụ cháy nhà 3 tầng ở Hà Nội
+url = https://znews.vn/3-nguoi-thoat-nan-trong-vu-chay-nha-3-tang-o-ha-noi-post1486371.html
 
 [primagold.com.vn]
 match = -225.0%%
@@ -490,4 +490,9 @@ url = http://www.16ga.com/forum/viewtopic.php?t=23452&sid=30667485ac752ac9664001
 match = -106.2%%
 title = What are some swear words in Vietnamese?
 url = https://www.quora.com/What-are-some-swear-words-in-Vietnamese
+
+[vn.investing.com]
+match = -212.5%%
+title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay ...
+url = https://vn.investing.com/news/stock-market-news/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-2186636
 
