--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-16 12:34:35
+lastsearch = 2024-07-16 14:46:28
 
 [www.tiktok.com]
 match = -111.8%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -17.6%%
 title = The Bankers Encyclopedia
-url = https://books.google.com/books?id=r4U8Z83fm_cC&pg=PA95&lpg=PA95&dq=man+in+hoa+dep+16&source=bl&ots=GLYLeEVVmW&sig=ACfU3U0xrCn64F1Fg-4FJ0rZCPRXlKoAFA&hl=en&sa=X&ved=2ahUKEwjkx9mb66qHAxW7MmIAHeBBBCwQ6AF6BAgoEAM
+url = https://books.google.com/books?id=r4U8Z83fm_cC&pg=PA95&lpg=PA95&dq=man+in+hoa+dep+16&source=bl&ots=GLYLeFS2n_&sig=ACfU3U1m9BaV1-dnxhUL2DTx3yRLIItrQw&hl=en&sa=X&ved=2ahUKEwjq9pPZiKuHAxUJhYkEHaKQBn4Q6AF6BAghEAM
 
 [tax.vermont.gov]
 match = -29.4%%
