--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-16 05:38:35
+lastsearch = 2024-07-16 14:48:29
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -395,4 +395,9 @@ url = https://www.teddyblake.com/
 match = 0.0%%
 title = 
 url = https://www.holidayhypermarket.co.uk/operators/tui/magic-life
+
+[arivalevent.app.swapcard.com]
+match = -175.0%%
+title = TUI Group: TUI, Musement and Intercruises
+url = https://arivalevent.app.swapcard.com/event/arival-or-activate-bangkok-2023/exhibitor/RXhoaWJpdG9yXzYwOTU4Nw==
 
