CI images update

--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-16 12:32:12
+lastsearch = 2024-07-16 15:22:05
 
 [www.gov.uk]
 match = -200.0%%
@@ -890,4 +890,14 @@ url = https://www.ihg.com/intercontinental/hotels/us/en/reservation
 match = -186.7%%
 title = Bloomberg - Business News, Stock Markets, Finance ...
 url = https://www.bloomberg.com/
+
+[www.collin.edu]
+match = 0.0%%
+title = Collin College
+url = https://www.collin.edu/index.html
+
+[www.reno.gov]
+match = -60.0%%
+title = City of Reno | Home - Reno.gov
+url = https://www.reno.gov/
 
