--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-16 14:12:59
+lastsearch = 2024-07-16 15:23:45
 
 [batdongsan.com.vn]
 match = -233.3%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -146.7%%
-title = Cong khuỷu tay sang 2 bên và hạ thấp thân ...
-url = https://www.facebook.com/photo.php?fbid=3056603124584773&id=1755099078068524&set=a.1772230163022082&locale=pt_PT
+match = -133.3%%
+title = Sân nhà cung các hoạt động khác diễn ra tại
+url = https://www.facebook.com/photo.php?fbid=742934241290442&id=100067216177900&set=a.505581898359012
 
 [lacvietauction.vn]
 match = -80.0%%
