--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-16 12:19:46
+lastsearch = 2024-07-16 15:17:23
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -160.0%%
+title = BẠN CÓ HẸN VỚI PERCE%%T NGUYỄN GIA TRÍ 69/1/7 ...
+url = https://www.facebook.com/percentcoffee.vn/videos/bạn-có-hẹn-với-percet-nguyễn-gia-trí6917-nguyễn-gia-trí-p25-quận-bình-thạnh-với-/2962693920542427/
 
 [grandpark-vinhomes.com]
 match = -186.7%%
