--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-16 11:52:03
+lastsearch = 2024-07-16 15:19:45
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -490,4 +490,14 @@ url = https://www.cvlga.org/
 match = 0.0%%
 title = Farm Labor
 url = https://www.ers.usda.gov/topics/farm-economy/farm-labor/
+
+[matthewsfuneralhome.com]
+match = -161.5%%
+title = Kyle Frank Mauk | Matthews Funeral Home
+url = https://matthewsfuneralhome.com/kyle-frank-mauk/
+
+[www.ni.com]
+match = -246.2%%
+title = Test and Measurement Systems, a part of Emerson - NI
+url = https://www.ni.com/en.html
 
