CI images update

--- a/images/chieu-lac-90x190/config.ini
+++ b/images/chieu-lac-90x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-90x190.html
 lastopen = 2024-07-15 14:11:34
 
 [search]
-lastsearch = 2024-06-22 10:22:22
+lastsearch = 2024-07-16 15:39:22
 
 [chieucoi.com.vn]
 match = 6.2%%
@@ -12,9 +12,9 @@ title = Chiếu cói Nga Sơn 90 x 190 cm
 url = https://chieucoi.com.vn/san-pham/chieu-coi-nga-son-90-x-190-cm/
 
 [www.facebook.com]
-match = -18.8%%
-title = Chiếu Cói Xuất Nhật | Hanoi
-url = https://www.facebook.com/ChieuCoiXuatNhat/?locale=vi_VN
+match = -62.5%%
+title = Chiếu trúc 2 mặt bảo hành trọn đời
+url = https://www.facebook.com/groups/252591339586880/posts/chiếu-trúc-2-mặt-bảo-hành-trọn-đời-90x190-80-mopgiấy-dân-tường-rộng-70x77-5-mop-/1016378926541447/
 
 [chuyenhangviet.com]
 match = -143.8%%
@@ -40,4 +40,24 @@ url = https://anfacolighting.vn/san-pham/den-led-am-tran-anfaco-afc-754t-2-9w
 match = -106.2%%
 title = Chiếu trúc cho mùa hè mát lạnh giá rẻ nhất
 url = http://forum.dmec.vn/index.php?threads/chiếu-trúc-cho-mùa-hè-mát-lạnh-giá-rẻ-nhất.19570/
+
+[www.diepxuan.com]
+match = -56.2%%
+title = Chiếu nhựa Thái Bình 90x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html
+
+[hunglien.net]
+match = 31.2%%
+title = Chiếu lạc - Hưng Liên
+url = http://hunglien.net/san-pham/chieu-lac/
+
+[www.lazada.vn]
+match = -137.5%%
+title = Chiếu Lác May Giá Tốt T07/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/chieu-lac-may/
+
+[foreverbedding.net]
+match = -125.0%%
+title = Bí Kíp Lựa Chọn Nệm Lò Xo Cho Một Người Nằm
+url = https://foreverbedding.net/bi-kip-lua-chon-nem-lo-xo-cho-mot-nguoi-nam
 
