--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-16 12:30:22
+lastsearch = 2024-07-16 15:36:41
 
 [www.youtube.com]
 match = -40.7%%
@@ -42,14 +42,14 @@ title = Chăn ga gối đệm cưới - Giá Tốt, Miễn Phí Vận Chuyển, 
 url = https://shopee.vn/list/chăn ga gối/đệm cưới
 
 [demxanh.com]
-match = -44.4%%
-title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
-url = https://demxanh.com/chan-ga-goi-olympia.html
+match = -74.1%%
+title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, hiệu quả
+url = https://demxanh.com/cach-lam-phong-ruot-goi.html
 
 [www.thegioididong.com]
-match = -63.0%%
-title = Cách chặn, bỏ chặn Facebook trên điện thoại, máy tính ...
-url = https://www.thegioididong.com/hoi-dap/huong-dan-chan-va-huy-chan-tai-khoan-facebook-1037037
+match = -55.6%%
+title = Cách xóa chặn cuộc gọi trên iPhone, điện thoại Android ...
+url = https://www.thegioididong.com/hoi-dap/tat-che-do-chan-cuoc-goi-tren-samsung-galaxy-note-604459
 
 [dienmaycholon.vn]
 match = -44.4%%
@@ -117,8 +117,8 @@ title = Valentine cake - feverdream_yuz - Blue Lock (Manga) ...
 url = https://archiveofourown.org/works/56978779
 
 [www.facebook.com]
-match = -14.8%%
-title = NẾU THẾ GIỚI NÀY ĐÃ KHÔNG DỊU DÀNG VỚI CẬU..
+match = -33.3%%
+title = Người Viết Lách | NẾU THẾ GIỚI NÀY ĐÃ KHÔNG DỊU ...
 url = https://www.facebook.com/groups/386973545401400/posts/nếu-thế-giới-này-đã-không-dịu-dàng-với-cậuchuyện-tôi-sắp-kể-cho-cậu-nghe-không-p/980452879386794/
 
 [play.google.com]
