--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-16 10:34:26
+lastsearch = 2024-07-16 15:40:06
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -42,9 +42,9 @@ title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
 url = https://jysk.vn/ruot-chan-goi
 
 [songhong.info]
-match = 14.3%%
-title = Chăn ga gối cao cấp Urban mã UC23-039
-url = https://songhong.info/chan-ga-goi-uc039
+match = 10.7%%
+title = Mẫu chăn ga gối cao cấp mã mầu UC22-019
+url = https://songhong.info/chan-ga-goi-uc019
 
 [cuahangchangagoidem.com]
 match = 3.6%%
