--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-16 13:50:32
+lastsearch = 2024-07-16 15:32:32
 
 [www.facebook.com]
-match = -147.1%%
-title = The Mao Shan Wang durians are priced at S$8 per kg.
-url = https://www.facebook.com/MothershipSG/posts/the-mao-shan-wang-durians-are-priced-at-s8-per-kg/892901902878579/
+match = -141.2%%
+title = Mom asked "have anyone heard of Mo Dan? My fren ...
+url = https://www.facebook.com/newageparents/posts/mom-asked-have-anyone-heard-of-mo-dan-my-fren-has-been-fever-on-and-off-for-almo/10150974043136876/
 
 [www.teadrunk.com]
 match = -100.0%%
