--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-16 15:23:14
+lastsearch = 2024-07-16 15:41:20
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [www.lazada.vn]
-match = -17.9%%
-title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
-url = https://www.lazada.vn/products/chieu-coi-tu-nhien-kieu-gap-doi-cao-cap-dai-loan-i1335463798.html
+match = -53.6%%
+title = Khay đá 18 viên nhựa Việt Nhật / Khay Đá Kim Cương 18 ...
+url = https://www.lazada.vn/products/khay-da-18-vien-nhua-viet-nhat-khay-da-kim-cuong-18-vien-khuon-lam-da-i1397366047.html
 
 [www.instagram.com]
 match = -50.0%%
