--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-07-16 12:34:13
+lastsearch = 2024-07-16 15:33:24
 
 [www.bible.com]
-match = -135.7%%
-title = JOHANA 16 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/JHN.16.MIZCLBSI
+match = -128.6%%
+title = MARKA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -22,9 +22,9 @@ title = Màn chụp tự bung 2016 - F2 - xanh viền xanh
 url = https://mungmocmien.com/products/man-chup-tu-bung-2016-code-f2-9
 
 [munghoangphat.com]
-match = -150.0%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = -21.4%%
+title = màn chụp đỉnh vuông tự bung
+url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [manthutrang.com]
 match = -207.1%%
@@ -47,14 +47,14 @@ title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 202
 url = https://www.mungbaobao.com/
 
 [boba.vn]
-match = -235.7%%
-title = Màn chụp tự bung người lớn chống muỗi giá rẻ chính hãng ...
-url = https://boba.vn/man-chup-tu-bung-nguoi-lon
+match = -142.9%%
+title = Màn chụp tự bung Gia Long 16x18x2cm - Loại 2 cửa
+url = https://boba.vn/man-chup-tu-bung-nguoi-lon/man-chup-tu-bung-gia-long-1-6-1-8x-2m-loai-2-cua
 
 [shopee.vn]
-match = -185.7%%
-title = Màn Khung Không Khoan Tường GIA LONG Khung Inox ...
-url = https://shopee.vn/Màn-Khung-Không-Khoan-Tường-GIA-LONG-Khung-Inox-304-Phi-16-Màu-Xanh-Hồng-KT-1m4-1m6-1m8-2m-i.1120412717.24251331954
+match = -128.6%%
+title = màn chụp giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp
 
 [text.egwwritings.org]
 match = -78.6%%
