--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-16 14:30:35
+lastsearch = 2024-07-16 15:38:32
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = 8.7%%
-title = 1972 in the Vietnam War
-url = https://en.wikipedia.org/wiki/1972_in_the_Vietnam_War
+match = -72.7%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -13.0%%
@@ -550,4 +550,9 @@ url = https://uk.news.yahoo.com/on-this-day-psy-gangnam-style-075352911.html
 match = -78.3%%
 title = ARCAN (@arcansaigon) • Instagram photos and videos
 url = https://www.instagram.com/arcansaigon/?hl=en
+
+[www.governmentattic.org]
+match = -104.3%%
+title = Defense Intelligence Agency report, Reference Book on ...
+url = https://www.governmentattic.org/8docs/DIArbcwiw_1983-016.pdf
 
