--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-07-16 08:00:49
+lastsearch = 2024-07-16 15:52:56
 
 [shopee.vn]
 match = -14.8%%
@@ -165,4 +165,9 @@ url = https://www.bebong.vn/products/chan-long-tuyet-cho-be
 match = -18.5%%
 title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
 url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
+
+[dogiasi.net]
+match = -55.6%%
+title = Chăn/mền lông tuyết trắng in thỏ gấu xuất Hàn loại đẹp size ...
+url = https://dogiasi.net/san-pham/chan-men-long-tuyet-trang-in-tho-gau-xuat-han-loai-dep-size-90x120cm/
 
