--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-16 11:37:37
+lastsearch = 2024-07-16 15:52:14
 
 [www.instagram.com]
-match = -100.0%%
-title = Kimbee Chan (@kimbeechan_official)
-url = https://www.instagram.com/kimbeechan_official/?hl=en
+match = -176.9%%
+title = HArris CHan | My first dior saddle bagggg. 🎅🏽🧝🏻 ...
+url = https://www.instagram.com/_harris_chan_/p/Cz3dzHtyRjX/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -17,8 +17,8 @@ title = Hoi Yee Ng - Christian Dior Couture
 url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
-match = -184.6%%
-title = Kimbee Chan Furthers Creative Pursuit With ...
+match = -238.5%%
+title = Kimbee Chan Furthers Creative Pursuit With Crochet ...
 url = https://wwd.com/fashion-news/fashion-scoops/kimbee-chan-knitwear-workshop-happy-yarn-1235938455/
 
 [vote.umich.edu]
@@ -57,8 +57,8 @@ title = Kwok Hoi Chan - 12 vintage design items
 url = https://www.vntg.com/designer/kwok-hoi-chan/
 
 [news.artnet.com]
-match = -246.2%%
-title = Fugitive Billionaire Joseph Lau Will Auction Off ...
+match = -338.5%%
+title = Fugitive Billionaire Joseph Lau Will Auction Off Millions of ...
 url = https://news.artnet.com/market/billionaire-joseph-lau-auctions-2093755
 
 [www.beautypackaging.com]
