--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-16 15:19:23
+lastsearch = 2024-07-16 15:50:50
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -355,4 +355,9 @@ url = https://xuatnhapcanh.gov.vn/vi/gioi-thieu/liên-hệ
 match = -100.0%%
 title = Đài Phát thanh và Truyền hình Đắk Lắk
 url = https://drt.vn/
+
+[www.photo.net]
+match = -56.2%%
+title = CZ Tessar 50mm in Leica M or LTM?
+url = https://www.photo.net/discuss/threads/cz-tessar-50mm-in-leica-m-or-ltm.154863/
 
