--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-16 15:16:51
+lastsearch = 2024-07-16 15:46:45
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = Can HOA come onto my property?
 url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -194.1%%
-title = If you live in a neighborhood with a HOA can they keep out ...
-url = https://www.quora.com/If-you-live-in-a-neighborhood-with-a-HOA-can-they-keep-out-a-resident-if-they-are-not-listed-on-the-deed
+match = -176.5%%
+title = Is it legal for a Florida HOA president to hire and pay ...
+url = https://www.quora.com/Is-it-legal-for-a-Florida-HOA-president-to-hire-and-pay-himself-as-a-Handyman-for-the-community-of-which-he-is-the-HOA-President
 
 [lauragoodsonart.com]
 match = 47.1%%
