--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-16 14:34:29
+lastsearch = 2024-07-16 16:16:32
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -12,9 +12,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [baomoi.com]
-match = -168.8%%
-title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
-url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
+match = -150.0%%
+title = Dự báo thời tiết đêm 16, ngày 17/7 - Báo Cao Bằng
+url = https://baomoi.com/du-bao-thoi-tiet-dem-16-ngay-17-7-c49646325.epi
 
 [www.thegioididong.com]
 match = -231.2%%
@@ -72,9 +72,9 @@ title = TIN TÔN GIÁO, CHIỀU THỨ HAI 15/07/2024
 url = https://www.youtube.com/watch?v=CW1lWW6yhOQ
 
 [books.google.com]
-match = -218.8%%
-title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHabzN7hyg&sig=ACfU3U31YzAMiGG62gPQ1Q0XDRSq77M42w&hl=en&sa=X&ved=2ahUKEwjqk_-BhquHAxUeFFkFHYGWCSwQ6AF6BAgfEAM
+match = -156.2%%
+title = Nizu #3: Bạn bè - Page 14 - Google Books Result
+url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+16&source=bl&ots=dtkMmdfoc3&sig=ACfU3U2NZfTXes9QBXawmYb-y2iiMmfwPQ&hl=en&sa=X&ved=2ahUKEwjO5PnpnKuHAxVxFFkFHZFKBUUQ6AF6BAgkEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
