--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-16 14:48:09
+lastsearch = 2024-07-16 16:31:40
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -22,9 +22,9 @@ title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đườn
 url = https://www.voatiengviet.com/a/7026996.html
 
 [www.youtube.com]
-match = -76.2%%
-title = Đài Loan Tung Chiêu Bóp Nghẹt Dã Tâm Của Trung Quốc
-url = https://www.youtube.com/watch?v=0--4nk6XRjE
+match = -114.3%%
+title = Phi Đội F-16V Tinh Nhuệ Của Đài Loan: Lời Cảnh Báo Đanh ...
+url = https://www.youtube.com/watch?v=XMZHfpjUzhg
 
 [m.facebook.com]
 match = -95.2%%
@@ -87,9 +87,9 @@ title = Top 10 Rạp chiếu phim ở Đài Bắc - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293913-Activities-c56-t97-Taipei.html
 
 [www.facebook.com]
-match = -95.2%%
-title = Cứ 1000 người ra đường tại Đài Loan, bạn có thể gặp 16 ...
-url = https://www.facebook.com/photo.php?fbid=6895761690441812&id=1459003740784328&set=a.1796931070324925
+match = -100.0%%
+title = Trấn Thành - Lịch chiếu MAI ở Đài Loan nha!!! Cả nhà cập...
+url = https://www.facebook.com/tran.thanh.ne/posts/lịch-chiếu-mai-ở-đài-loan-nha-cả-nhà-cập-nhật-để-đi-xem-cho-dễ-ạh-ra-rạp-thôi-đà/1026713498818919/
 
 [cau-ca.com]
 match = -42.9%%
