--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-16 15:37:37
+lastsearch = 2024-07-16 16:33:05
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -102,9 +102,9 @@ title = Secured Home of congnghiepthanglong.com
 url = https://congnghiepthanglong.com/
 
 [sv.ut.edu.vn]
-match = -75.0%%
-title = luật poker omaha-App Store5.93.517
-url = https://sv.ut.edu.vn/newsr4ru7ie5.html
+match = -125.0%%
+title = mega88 slot game–Apps on Google Play964.91.4
+url = https://sv.ut.edu.vn/newscowtl1.html
 
 [en.wikipedia.org]
 match = 6.2%%
@@ -480,4 +480,9 @@ url = https://cafef.vn/vu-am-sat-hut-ong-trump-co-the-thay-doi-dai-hoi-toan-quoc
 match = -187.5%%
 title = Tổng hợp tin tức về Bắc Giang trên báo chí ngày 16/7/2024
 url = https://atgt.bacgiang.gov.vn/chi-tiet-tin-tuc/-/asset_publisher/9DJTiagaQTlH/content/tong-hop-tin-tuc-ve-bac-giang-tren-bao-chi-ngay-16-7-2024/20181
+
+[kinhtedothi.vn]
+match = -225.0%%
+title = Tai nạn giao thông mới nhất 16/7/2024: lọt gầm xe, cụ ông ...
+url = https://kinhtedothi.vn/tai-nan-giao-thong-moi-nhat-16-7-2024-lot-gam-xe-cu-ong-82-tuoi-tu-vong.html
 
