--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-07-16 15:39:13
+lastsearch = 2024-07-16 16:53:09
 
 [us.misumi-ec.com]
 match = -350.0%%
@@ -153,8 +153,8 @@ url = https://insideucr.ucr.edu/stories/2022/10/10/meet-ucrs-new-faculty-members
 
 [sspcdn.blob.core.windows.net]
 match = -333.3%%
-title = Regeneron International Science and Engineering Fair 2024
-url = https://sspcdn.blob.core.windows.net/files/Documents/SEP/ISEF/2024/Attendees/Programs/Book.pdf
+title = Regeneron International Science and Engineering Fair 2023
+url = https://sspcdn.blob.core.windows.net/files/Documents/SEP/ISEF/2023/Attendees/Programs/Book.pdf
 
 [aesl.ces.uga.edu]
 match = -350.0%%
@@ -245,4 +245,9 @@ url = https://protectborrowers.org/wp-content/uploads/2021/06/AS-FILED-Aguocha-e
 match = -300.0%%
 title = Welcome to Corona Regional Medical Center | Corona, CA
 url = https://www.swhcoronaregional.com/
+
+[registrar.ucla.edu]
+match = -325.0%%
+title = University of California General Catalogue Bulletin 1950-51
+url = https://registrar.ucla.edu/file/b21f64a4-4d88-4f22-bae9-2451e083973c
 
