--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-16 12:45:27
+lastsearch = 2024-07-16 16:48:41
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,9 +52,9 @@ title = South China Sea
 url = https://en.wikipedia.org/wiki/South_China_Sea
 
 [books.google.com]
-match = -126.1%%
-title = Wars That Changed History: 50 of the World's Greatest Conflicts
-url = https://books.google.com/books?id=ehbHEAAAQBAJ&pg=PA530&lpg=PA530&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=TgbDL0SWoo&sig=ACfU3U166WUtdT7jNW61cGZtK9qQQGjODQ&hl=en&sa=X&ved=2ahUKEwjO6syU7KqHAxWNLFkFHe1mBioQ6AF6BAgnEAM
+match = -43.5%%
+title = Vietnam - Page 187 - Google Books Result
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYqTa9PZH&sig=ACfU3U3aRHGH7xWU5y5moxx2lHO-9q8YWg&hl=en&sa=X&ved=2ahUKEwjd9q6BpKuHAxUXMlkFHdreBSwQ6AF6BAgkEAM
 
 [www.travelweekly.com]
 match = -87.0%%
