--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-16 15:23:45
+lastsearch = 2024-07-16 16:49:13
 
 [batdongsan.com.vn]
 match = -233.3%%
@@ -247,9 +247,9 @@ title = Ghi bàn trên ứng dụng HDBank, đến châu Âu xem chung ...
 url = https://hdbank.com.vn/vi/news/detail/tin-tuc/ghi-ban-tren-ung-dung-hdbank-den-chau-au-xem-chung-ket-euro-2024
 
 [thuvienphapluat.vn]
-match = -226.7%%
-title = Bản án về tranh chấp hợp đồng chuyển nhượng quyền sử ...
-url = https://thuvienphapluat.vn/banan/ban-an/ban-an-ve-tranh-chap-hop-dong-chuyen-nhuong-quyen-su-dung-dat-so-1562024dspt-325428
+match = -286.7%%
+title = Bản án 200/2020/DS-PT ngày 17/08/2020 về tranh chấp yêu cầu ...
+url = https://thuvienphapluat.vn/banan/ban-an/ban-an-2002020dspt-ngay-17082020-ve-tranh-chap-yeu-cau-mo-loi-di-qua-bat-dong-san-lien-ke-190389
 
 [katinat.vn]
 match = -160.0%%
