--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-16 15:52:25
+lastsearch = 2024-07-16 16:47:26
 
 [zhangbrickshop.com]
 match = -133.3
@@ -59,7 +59,7 @@ url = https://vjol.info.vn/index.php/vinhuni/article/download/51293/42137/
 [m.facebook.com]
 match = -186.7%%
 title = Hội Những Người Ở Ký Túc Xá Khu B - KTX ĐHQG TP.HCM
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2388350114878787/
+url = https://m.facebook.com/groups/hoiktxkhub/posts/2389133951467070/
 
 [dkv.biz.vn]
 match = -166.7%%
@@ -142,9 +142,9 @@ title = Top 22 vitamin D3 K2 tăng chiều cao các mẹ tin dùng nên ...
 url = https://www.nhathuocankhang.com/ban-tin-suc-khoe/cac-loai-vitamin-d3-k2-tot-tren-thi-truong-1385972
 
 [www.youtube.com]
-match = -180.0%%
-title = CHUỘT GAMING DÀNH CHO GÓC SETUP RGB?! - Review ...
-url = https://www.youtube.com/watch?v=Z9kpqsTXNKM
+match = -253.3%%
+title = GOML X - Light (Fox) Vs. SHADIC (Corrin) Smash Ultimate ...
+url = https://www.youtube.com/watch?v=WXnYvzhsgrU
 
 [www.slideshare.net]
 match = -66.7%%
@@ -167,9 +167,9 @@ title = Báo sự cố
 url = https://capnuoctrungan.vn/Main/BaoSuCo/Create
 
 [www.instagram.com]
-match = -50.0%%
-title = Open app
-url = https://www.instagram.com/p/C0bphYSiGbB/
+match = -133.3%%
+title = CLAY - Cocktails & Cuisine (@clay_saigon)
+url = https://www.instagram.com/clay_saigon/?locale=找人做个罗马尼亚焊工資格證書联系{威信+TG/飞机:@buth2788}6TkHs??????ѧ??ƾ8c6a4
 
 [www.tiktok.com]
 match = -246.7%%
