--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-16 16:33:57
+lastsearch = 2024-07-16 16:44:06
 
 [www.amazon.com]
-match = -309.1%%
-title = Ghe Tham Nang Da [Explicit] : franchesca: Música Digital
-url = https://www.amazon.com/-/es/franchesca/dp/B09D3V162X
+match = -100.0%%
+title = Ghe da yeu thuong - Hugo Luân
+url = https://www.amazon.com/Ghe-thuong-Explicit-Hugo-Luân/dp/B0CM6V2CPL
 
 [chungauto.vn]
 match = -209.1%%
@@ -47,9 +47,9 @@ title = Bọc ghế da ô tô Xpander (da Thái) - RedCar.com
 url = https://redcar.com.vn/san-pham/boc-ghe-da-o-to-xpander-da-thai/
 
 [bocghedaoto.net]
-match = -181.8%%
-title = Bọc ghế da ô tô chất lượng cao Tại Nhà
-url = https://bocghedaoto.net/boc-ghe-da-oto-tai-nha
+match = -109.1%%
+title = 50+ Mẫu Bọc Ghế Da Xe Camry Đẹp
+url = https://bocghedaoto.net/boc-ghe-da-xe-camry
 
 [ghedagiago.com]
 match = -290.9%%
@@ -87,9 +87,9 @@ title = Bọc Ghế Da Xe Tải - Mẫu Ghế Da Xe Ô Tô Tải
 url = https://dailyhyundai.com/boc-ghe-xe-tai-.html
 
 [zestechvn.com]
-match = -318.2%%
-title = Bảng giá : Lót sàn – Thảm lót chân – Bọc ghế da của Lavor
-url = https://zestechvn.com/bang-gia-lot-san-tham-lot-chan-boc-ghe-da-cua-lavor/
+match = 18.2%%
+title = Bọc ghế da ô tô
+url = https://zestechvn.com/san-pham/boc-ghe-da-o-to/
 
 [github.com]
 match = -81.8%%
@@ -155,4 +155,9 @@ url = https://dammedoxe.vn/boc-ghe-da-o-to-7-cho-xl7/
 match = 36.4%%
 title = Thảm phủ ghế sofa
 url = https://flexhouse.vn/tu-khoa-san-pham/tham-phu-ghe-sofa
+
+[otohayauto.vn]
+match = -81.8%%
+title = Bọc ghế da ô tô Long Xuyên
+url = https://otohayauto.vn/boc-ghe-da-o-to-long-xuyen/
 
