--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-16 14:30:44
+lastsearch = 2024-07-16 16:51:00
 
 [www.tiktok.com]
-match = -243.8%%
-title = #beautytok #fauxfiltercolorcorrector #colorcorrection @Huda ...
-url = https://www.tiktok.com/@hudabeauty/video/7349654926324419886
+match = -6.2%%
+title = Huda Beauty Lip Stain
+url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
 
 [digitalmaine.com]
 match = -75.0%%
