CI images update

--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-16 17:13:25
+lastsearch = 2024-07-16 17:31:38
 
 [www.facebook.com]
 match = -141.2%%
@@ -22,8 +22,8 @@ title = Chăn Mao Tân 4kg - Điệp Xuân
 url = https://www.diepxuan.com/chan-mao-tan-4kg.html
 
 [m.facebook.com]
-match = -176.5%%
-title = Royal Durian Singapore - ⛟ Free delivery Get 4kg of Mao ...
+match = -194.1%%
+title = Royal Durian Singapore - ⛟ Free delivery Get 4kg of Mao Shan ...
 url = https://m.facebook.com/RoyalDurian/photos/a.3010278729046072/3525143447559595/?type=3
 
 [en.wikipedia.org]
@@ -230,4 +230,9 @@ url = https://essd.copernicus.org/articles/14/4811/2022/
 match = -170.6%%
 title = Amerijet: Shipping Company | Air Freight | Cargo Shipping
 url = https://amerijet.com/
+
+[www.todayonline.com]
+match = -188.2%%
+title = Gorge On A $48 Durian Omakase Served By 'Bruno Mars' At ...
+url = https://www.todayonline.com/8days/eatanddrink/newsandopening/gorge-48-durian-omakase-served-bruno-mars-hip-cafe
 
