--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-16 15:22:45
+lastsearch = 2024-07-16 17:34:34
 
 [shopee.vn]
 match = -8.0%%
@@ -87,9 +87,9 @@ title = Sự kiện Dịch vụ Lãnh Sự sắp tới tại Đà Nẵng
 url = https://vn.usembassy.gov/vi/upcoming-consular-services-event-in-da-nang-24-june-2024/
 
 [m.facebook.com]
-match = -92.0%%
-title = Gap go buoi toi tam ti may c oi | By Kem sach olee NGOC ...
-url = https://m.facebook.com/Kem-sach-olee-NGOC-HA-100204011784578/videos/gap-go-buoi-toi-tam-ti-may-c-oi/1408185629686574/
+match = -88.0%%
+title = Ngồi coi video về chống lừa đảo... - Xin chào, tôi ở Đài Loan
+url = https://m.facebook.com/toiodailoan/posts/5438087432905953/?locale=hi_IN
 
 [www.youtube.com]
 match = -84.0%%
@@ -117,9 +117,9 @@ title = Ông Trump đã đi chơi golf chưa đầy 24 giờ sau khi bị ám ..
 url = https://trithucvn.co/the-gioi/ong-trump-da-di-choi-golf-chua-day-24-gio-sau-khi-bi-am-sat-hut.html
 
 [www.klook.com]
-match = -12.0%%
-title = 15 Món Đặc Sản Đài Loan Nhất Định Phải Thử
-url = https://www.klook.com/vi/blog/dac-san-dai-loan/
+match = -44.0%%
+title = 17 Cảnh Đẹp Đài Loan Nổi Tiếng Bạn Không Nên Bỏ Lỡ
+url = https://www.klook.com/vi/blog/canh-dep-dai-loan/
 
 [www.dkn.tv]
 match = -76.0%%
