--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-16 16:36:40
+lastsearch = 2024-07-16 17:36:21
 
 [www.youtube.com]
 match = -48.0%%
@@ -44,7 +44,7 @@ url = https://trithucvn.co/the-gioi/dai-loan-canh-giac-voi-lan-song-thu-ten-lua-
 [books.google.com]
 match = -116.0%%
 title = Trung Xô Mỹ Cuộc Đối Đầu Lịch Sử - Page 637 - Google Books Result
-url = https://books.google.com/books?id=xfvcEAAAQBAJ&pg=PA637&lpg=PA637&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=qWSTFFdcDt&sig=ACfU3U3_HkBZtjfFFKpH7uKFc9bgXon4UQ&hl=en&sa=X&ved=2ahUKEwiluuipoauHAxU4C0QIHXVAAisQ6AF6BAgYEAM
+url = https://books.google.com/books?id=xfvcEAAAQBAJ&pg=PA637&lpg=PA637&dq=chieu+gap+dai+loan+lua+16&source=bl&ots=qWSTFFh7Lu&sig=ACfU3U08xC2xSJYRiiKsQXBMDaDDP1xeaw&hl=en&sa=X&ved=2ahUKEwjO35DVrquHAxW-J0QIHdUXAk4Q6AF6BAgVEAM
 
 [www.skyscanner.com.vn]
 match = -48.0%%
