CI images update

--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-16 16:37:15
+lastsearch = 2024-07-16 17:48:29
 
 [www.lazada.vn]
 match = -268.8%%
@@ -119,7 +119,7 @@ url = https://www.dailymail.co.uk/tvshowbiz/article-7671041/Rob-Kardashian-treat
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/?locale=nb_NO
+url = https://www.facebook.com/diepxuanco/?locale=sv_SE
 
 [extenzee.com]
 match = -262.5%%
@@ -142,9 +142,9 @@ title = christian dior perfumes antigos - list of dior fragrances
 url = https://www.innovatemenudesign.com/products/nwalliry-53/
 
 [htk684.com]
-match = -137.5%%
-title = tui warmdream 16 - Flying TUI Dreamliner - htk684.com
-url = https://htk684.com/products/lrrxzabx-255/
+match = -231.2%%
+title = chance chanel מחיר - השוואת מחירים לשה chanel - htk684.com
+url = https://htk684.com/blogs/ljsfovqk-111//
 
 [www.tui.co.uk]
 match = 0.0%%
