--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-07-16 16:36:09
+lastsearch = 2024-07-16 17:47:15
 
 [tiki.vn]
 match = -200.0%%
@@ -37,9 +37,9 @@ title = Nhận biết chăn lông cừu hữu cơ và chăn tổng hợp - Lasan
 url = https://lasantevn.com/nhan-biet-chan-long-cuu-huu-co-va-chan-tong-hop/
 
 [shopee.vn]
-match = -173.3%%
-title = chăn lông cừu ultimate giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn lông cừu ultimate
+match = 20.0%%
+title = chăn lông cừu ultimate
+url = https://shopee.vn/search?keyword=chăn+lông+cừu+ultimate+loại+dày+2+lớp,+chăn+mềm+nhưng+mùa+đông,+chăn+lông+thỏ+muji+mềm+mại,+tạo+cảm+giác+dễ+chịu,+thoải+mái,+giúp+mang+lại+giấc+ngủ+ngon+và+ấm+áp+cho+bạn+và+cả+gia+đình+chăn+lông+tuyết+cao+cấp+2m2x2m3
 
 [changadep88.vn]
 match = -80.0%%
