CI images update

--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-07-16 14:32:07
+lastsearch = 2024-07-16 18:18:19
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -82,9 +82,9 @@ title = Thú bông treo nôi mặt voi kèm lục lạc, gặm nướu giá tố
 url = https://concung.com/do-choi-em-be/thu-bong-treo-noi-mat-voi-kem-luc-lac-gam-nuou-55666.html
 
 [shopee.vn]
-match = -18.8%%
-title = Chiếu lác thiên nhiên : 1m6 .1m8
-url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
+match = -75.0%%
+title = chiếu lác xuất khẩu 1m8 chiếu dầy cao cấp
+url = https://shopee.vn/chiếu-lác-xuất-khẩu-1m8-chiếu-dầy-cao-cấp-i.275355238.7156323941
 
 [www.conggiao.org]
 match = -68.8%%
@@ -312,9 +312,9 @@ title = AEON VIETNAM - TT bách hoá tổng hợp & Siêu thị đến từ ...
 url = https://www.aeon.com.vn/
 
 [www.lazada.vn]
-match = -143.8%%
-title = Chiếu Lác 1m6 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/
+match = -125.0%%
+title = Chiếu Lác May Giá Tốt T07/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/chieu-lac-may/
 
 [yato.vn]
 match = -175.0%%
