--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-07-16 17:44:29
+lastsearch = 2024-07-16 18:14:24
 
 [shopee.vn]
-match = -52.4%%
-title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm trải giường
+match = 33.3%%
+title = Thảm 2,2m trải giường
+url = https://shopee.vn/Thảm-2-2m-trải-giường-i.2248373.772633100
 
 [www.lazada.vn]
 match = -76.2%%
