--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-16 14:46:17
+lastsearch = 2024-07-16 18:11:15
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -77,9 +77,9 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [shopee.vn]
-match = -75.0%%
-title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
-url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
+match = -33.3%%
+title = bộ vỏ chăn ga gối giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ vỏ chăn ga gối
 
 [demxanh.com]
 match = -8.3%%
@@ -92,9 +92,9 @@ title = Mẫu 16 - Chăn Ga Gối Đệm Benlinda Hải Phòng
 url = https://changagoibenlinda.com/mau-16
 
 [bochangagoi.vn]
-match = 25.0%%
-title = Chăn ga gối HQ22
-url = https://bochangagoi.vn/bo-chan-ga-goi-hq22/
+match = -70.8%%
+title = Bộ chăn ga gối OZ Bedding - Top 5 mẫu chăn ga gối cao cấp ...
+url = https://bochangagoi.vn/
 
 [ninhouse.vn]
 match = -75.0%%
