--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-16 16:49:35
+lastsearch = 2024-07-16 18:13:31
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
 
 [shopee.vn]
-match = -7.1%%
-title = Chiếu nhựa 🍀𝑭𝑹𝑬𝑬 𝑺𝑯𝑰𝑷🍀Chiếu nhựa loại đẹp Hà Nội ...
-url = https://shopee.vn/Chiếu-nhựa-🍀𝑭𝑹𝑬𝑬-𝑺𝑯𝑰𝑷🍀Chiếu-nhựa-loại-đẹp-Hà-Nội-chiếu-nhựa-chiếu-nhựa-gấp-gọn-chiếu-ngủ-văn-phòng-du-lịch-i.533272024.25669597976
+match = -25.0%%
+title = Chiếu nhựa gấp gọn size 2m ×3m chiếu ăn cơm hàng đẹp ...
+url = https://shopee.vn/Chiếu-nhựa-gấp-gọn-size-2m-×3m-chiếu-ăn-cơm-hàng-đẹp-nhiều-màu-i.114438421.4732248740
 
 [tiki.vn]
 match = -21.4%%
@@ -22,9 +22,9 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.yellowpages.vn]
-match = -3.6%%
-title = chiếu nhựa, chiếu cói, chiếu tre, chiếu trúc ở tại
-url = https://www.yellowpages.vn/class/490435/chiếu-nhựa,-chiếu-cói,-chiếu-tre,-chiếu-trúc-ở_.html
+match = 0.0%%
+title = danh sách Chiếu Nhựa
+url = https://www.yellowpages.vn/tgcls/10490435/Chiếu-Nhựa.html?j=0
 
 [www.dienmayxanh.com]
 match = -35.7%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = 42.9%%
-title = chiếu nhựa thái 1m8x3m - sp 66677
-url = https://www.sendo.vn/chieu-nhua-thai-1m8x3m-37120771.html
+match = -25.0%%
+title = Chiếu nhựa gấp gọn size 4m, 3m chiếu ăn cơm hàng đẹp ...
+url = https://www.sendo.vn/chieu-nhua-gap-gon-size-4m-3m-chieu-an-com-hang-dep-nhieu-mau-109448350.html
 
 [mia.vn]
 match = -39.3%%
