--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-07-16 16:15:37
+lastsearch = 2024-07-16 18:15:40
 
 [thegioidemviet.vn]
-match = 21.4%%
-title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
-url = https://thegioidemviet.vn/chieu-truc/
+match = 35.7%%
+title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
+url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [shopee.vn]
 match = -3.6%%
@@ -42,9 +42,9 @@ title = Chiếu Trúc Hạt Loại Một Giá Cực Rẻ Nên Mua Ở Đâu
 url = https://www.sendo.vn/chieu-truc-hat.htm
 
 [www.lazada.vn]
-match = -42.9%%
-title = Chiếu trúc hạt trắng Chiếu trúc hạt đen quế lâm hàng loại 1cao ...
-url = https://www.lazada.vn/products/chieu-truc-hat-trang-chieu-truc-hat-den-que-lam-hang-loai-1cao-cap-du-kich-thuoc-tu-1m2-den-2m2-i2701686233-s13201986239.html?from_gmc=1&fl_tag=1
+match = 0.0%%
+title = Chiếu Trúc Hạt Quế Lâm hàng loại 1 tem xanh 1m2, 1m5 ...
+url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-hang-loai-1-tem-xanh-1m2-1m5-1m6-i732230394.html
 
 [thegioidemonline.com]
 match = -39.3%%
