--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-16 17:11:28
+lastsearch = 2024-07-16 18:18:41
 
 [www.reddit.com]
-match = 4.3%%
-title = Nemesis hits rank 2 Korea - 1726 lp
-url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
+match = -113.0%%
+title = Every single starting Mid Laner in NA is Korean, Danish, or ...
+url = https://www.reddit.com/r/leagueoflegends/comments/4vfbkt/every_single_starting_mid_laner_in_na_is_korean/
 
 [en.wikipedia.org]
 match = -58.3%%
@@ -282,9 +282,9 @@ title = Introduction
 url = https://www.degruyter.com/document/doi/10.1515/9780824887964-013/pdf?licenseType=restricted
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -87.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [lol.fandom.com]
 match = 0.0%%
@@ -332,9 +332,9 @@ title = July-August 2024 (Volume 76, Number 3)
 url = https://monthlyreview.org/2024/07/01/mr-076-03-2024-07_0/
 
 [synapse.koreamed.org]
-match = -2100.0%%
-title = 2
-url = https://synapse.koreamed.org/articles/1096353
+match = -25.0%%
+title = Original Article
+url = https://synapse.koreamed.org/articles/1119644
 
 [www.svcleanenergy.org]
 match = 0.0%%
