--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-16 15:35:59
+lastsearch = 2024-07-16 18:18:50
 
 [shopee.vn]
 match = -216.7%%
@@ -47,9 +47,9 @@ title = Thảm ghế nệm ghế kích thước 2m2 x 55cm mẫu màu đỏ ...
 url = https://tiki.vn/tham-ghe-nem-ghe-kich-thuoc-2m2-x-55cm-mau-mau-do-moi-co-vien-p89638586.html
 
 [suongtuyet.com]
-match = -125.0%%
-title = Bộ Sưu Tập Đệm Ghế Gỗ Đẹp Nhất 2024
-url = https://suongtuyet.com/bo-suu-tap-nem-ghe-go-dep-gia-re-cho-gia-dinh.html
+match = -133.3%%
+title = Nên Mua Thảm Lót Ghế Gỗ Hay Đệm Ghế Gỗ?
+url = https://suongtuyet.com/nen-mua-tham-lot-ghe-go-hay-dem-ghe-go.html
 
 [nemkimcuong.vn]
 match = -16.7%%
@@ -57,9 +57,9 @@ title = BỘ GHẾ ĐƠN MODEL 01
 url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 
 [www.lazada.vn]
-match = -266.7%%
-title = Thảm ghế 2m2 x 55cm nệm lót ghế gỗ hoàng gia đỏ kích ...
-url = https://www.lazada.vn/products/tham-ghe-2m2-x-55cm-nem-lot-ghe-go-hoang-gia-do-kich-thuoc-co-dai-2m2-x-55cm-gom-1-tam-dai-va-2-tam-ngan-i902914335.html
+match = -116.7%%
+title = Nệm lot ghế, thảm trải ghế 1m6 x53cm
+url = https://www.lazada.vn/products/nem-lot-ghe-tham-trai-ghe-1m6-x53cm-i2418423966.html
 
 [vn.my-best.com]
 match = -233.3%%
@@ -132,7 +132,7 @@ title = Mẫu Nệm Lót Ghế Gỗ Đẹp, Xịn, Hàng Chất Lượng, Giá R
 url = https://anmoc.vn/blogs/news/nem-lot-ghe-go
 
 [dienmaycholon.com]
-match = -291.7%%
-title = Máy Giặt Sofa, Nệm, Thảm Cầm Tay Uwant B100 giá rẻ, ...
+match = -200.0%%
+title = Máy Giặt Sofa, Nệm, Thảm Cầm Tay Uwant B100
 url = https://dienmaycholon.com/may-hut-bui-robot-hut-bui/may-giat-sofa-nem-tham-cam-tay-uwant-b100
 
