CI images update

--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-16 15:50:50
+lastsearch = 2024-07-16 18:31:48
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -360,4 +360,9 @@ url = https://drt.vn/
 match = -56.2%%
 title = CZ Tessar 50mm in Leica M or LTM?
 url = https://www.photo.net/discuss/threads/cz-tessar-50mm-in-leica-m-or-ltm.154863/
+
+[tlctrading.vn]
+match = -187.5%%
+title = Tiêu chuẩn mua túi chống sốc gồm những gì? Cùng tìm hiểu
+url = https://tlctrading.vn/tieu-chuan-mua-tui-chong-soc
 
