--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-07-16 08:02:16
+lastsearch = 2024-07-16 18:29:25
 
 [shopee.vn]
 match = -57.1%%
@@ -140,4 +140,9 @@ url = https://smartdecor.vn/mau-tu-dau-giuong-dep/
 match = 23.8%%
 title = Giường bọc nệm - LND 15
 url = https://decor.lanha.vn/san-pham/giuong-boc-nem-lnd-15/
+
+[ru9.vn]
+match = -81.0%%
+title = Đệm giường đôi có kích thước bao nhiêu? Top mẫu ...
+url = https://ru9.vn/blogs/magazine/dem-doi
 
