--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-16 17:48:29
+lastsearch = 2024-07-16 18:30:42
 
 [www.lazada.vn]
 match = -268.8%%
@@ -142,9 +142,9 @@ title = christian dior perfumes antigos - list of dior fragrances
 url = https://www.innovatemenudesign.com/products/nwalliry-53/
 
 [htk684.com]
-match = -231.2%%
-title = chance chanel מחיר - השוואת מחירים לשה chanel - htk684.com
-url = https://htk684.com/blogs/ljsfovqk-111//
+match = -137.5%%
+title = tui warmdream 16 - Flying TUI Dreamliner - htk684.com
+url = https://htk684.com/products/lrrxzabx-255/
 
 [www.tui.co.uk]
 match = 0.0%%
@@ -152,7 +152,7 @@ title =
 url = https://www.tui.co.uk/destinations/info/dreamliner
 
 [globalmaxhosting.com]
-match = -168.8%%
-title = Low Key Hobo PM - bolsa pequena da louis vuitton
-url = https://globalmaxhosting.com/blogs/ihsnhsem-236//
+match = -212.5%%
+title = multiple return in python - bolsa pequena da louis vuitton
+url = https://globalmaxhosting.com/blogs/tyonogkq-277//
 
