--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-16 13:40:02
+lastsearch = 2024-07-16 18:24:23
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfjIFli7&sig=ACfU3U2RBsNn2g7RM1pVyygNBEiU9KzK4Q&hl=en&sa=X&ved=2ahUKEwibtp_s-aqHAxXbEFkFHfxvBy0Q6AF6BAgbEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfjJMlo9&sig=ACfU3U04aFoLYcou26rIEkvlJ1pjDUzDZQ&hl=en&sa=X&ved=2ahUKEwjI19ezuauHAxUqL1kFHXdcCiwQ6AF6BAgYEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
