CI images update

--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-16 15:38:32
+lastsearch = 2024-07-16 19:26:15
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -27,8 +27,8 @@ title = Kristi Noem
 url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
-match = -13.0%%
-title = U.S. Army Pacific | Honolulu HI
+match = -11.8%%
+title = U.S. Army Pacific
 url = https://www.facebook.com/USARPAC/
 
 [www.cia.gov]
