--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-16 15:17:56
+lastsearch = 2024-07-16 19:32:06
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -12,9 +12,9 @@ title = CHIẾU TRÚC TĂM H&T CÂY
 url = https://chieutrucsaigon.com/chieu-truc-tam/
 
 [shopee.vn]
-match = -6.7%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -106.7%%
+title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
+url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
 
 [chieutruc.info]
 match = -126.7%%
@@ -22,9 +22,9 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -20.0%%
-title = Bóng Bulb HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/bong-bulb-htlight
+match = -66.7%%
+title = Âm trần downlight HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/am-tran-downlight-htlight
 
 [www.htlightlevel.vn]
 match = -120.0%%
@@ -57,9 +57,9 @@ title = Cây bắt mồi
 url = https://hactexoticzone.com/cay-bat-moi
 
 [www.youtube.com]
-match = -166.7%%
-title = CHƠI- kỳ 10- Ngón Tay Chỉ Trăng -HT THÍCH TỪ THÔNG
-url = https://www.youtube.com/watch?v=tZWh9zAOkYM
+match = -240.0%%
+title = Xét xử vụ buôn lậu 6 tấn vàng từ Campuchia về Việt Nam ...
+url = https://www.youtube.com/watch?v=m2nq4Cn9Oqc
 
 [thaibinhseed.com.vn]
 match = -193.3%%
