--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-07-16 18:45:34
+lastsearch = 2024-07-16 19:25:08
 
 [shopee.vn]
-match = -25.0%%
-title = Chiếu mây điều hòa lót lụa cao cấp có chun bo góc giúp cố ...
-url = https://shopee.vn/Chiếu-mây-điều-hòa-lót-lụa-cao-cấp-có-chun-bo-góc-giúp-cố-định-chiếu-Chiếu-điều-hoà-sợi-mây-viền-lụa-thoáng-khí-tốt-i.472596491.13662110393
+match = 39.3%%
+title = Chiếu Điều Hòa Lụa Thông Khí Mát Rượi ...
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Thông-Khí-Mát-Rượi-Chiếu-Điều-Hòa-Sợi-Mây-Cao-Cấp-loại-đep-.-i.594187438.16425215901
 
 [chieutrelanlan.com]
 match = 19.0%%
