--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-16 16:33:16
+lastsearch = 2024-07-16 19:31:22
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -150.0%%
-title = TÌNH CỜ TÌM ĐƯỢC NGƯỜI THÂN VÔ GIA CƯ Ở MỸ QUA ...
-url = https://www.youtube.com/watch?v=6598XYpaW3E
+match = -193.8%%
+title = Một cây Mai Chiếu Thủy đã được chơi 10 năm, vẫn giữ giá ...
+url = https://www.youtube.com/watch?v=nv0EjrLAqh0
 
 [hawater.com.vn]
 match = -75.0%%
@@ -92,9 +92,9 @@ title = Chợ ma – dấu ấn nghề chiếu
 url = https://baotang.dongthap.gov.vn/di-san-van-hoa/cho-ma-dau-an-nghe-chieu-37.html
 
 [sv.ut.edu.vn]
-match = -125.0%%
-title = mega88 slot game–Apps on Google Play964.91.4
-url = https://sv.ut.edu.vn/newscowtl1.html
+match = -75.0%%
+title = luật poker omaha-App Store5.93.517
+url = https://sv.ut.edu.vn/newsr4ru7ie5.html
 
 [yamaha-motor.com.vn]
 match = -43.8%%
