--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-16 18:14:58
+lastsearch = 2024-07-16 19:28:29
 
 [m.youtube.com]
 match = -144.4%%
@@ -22,9 +22,9 @@ title = Nem Xuyên Bang (@nemxuyenbang)
 url = https://www.instagram.com/nemxuyenbang/?hl=en
 
 [www.facebook.com]
-match = -105.6%%
-title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
-url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
+match = -16.7%%
+title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
+url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
 
 [www.tiktok.com]
 match = -133.3%%
@@ -42,9 +42,9 @@ title = [TPHCM] Bún Nem Nướng Siêu To Ăn Là No Lăn Ở Quận 10
 url = https://www.grab.com/vn/en/food-blog/trending-food/tphcm-bun-nem-nuong-sieu-to-an-la-no-lan-o-quan-10/
 
 [www.diepxuan.com]
-match = -16.7%%
-title = Nệm siêu nhẹ 180x200x05 - Điệp Xuân
-url = https://www.diepxuan.com/nem-sieu-nhe-180x200x05.html
+match = 11.1%%
+title = Điệp Xuân Nệm siêu nhẹ
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [shopcamping.vn]
 match = -144.4%%
