CI images update

--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-07-16 19:24:13
+lastsearch = 2024-07-16 19:56:41
 
 [www.maihuyencorp.com]
-match = -85.0%%
-title = Cửa hàng chiếu nhựa, mành, rèm, thảm uy tin tại Hà Nội
-url = https://www.maihuyencorp.com/shop
+match = -20.0%%
+title = Mai Huyền - Chiếu nhựa cao cấp - Hanoi
+url = https://www.maihuyencorp.com/
 
 [shopee.vn]
-match = -85.0%%
-title = Chiếu Nhựa Mai Huyền Hà Nội 1,5m , 1,6m , 1m8,1m8x3m ...
-url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-Hà-Nội-1-5m-1-6m-1m8-1m8x3m-1m8x4m-i.81313558.12532512757
+match = -70.0%%
+title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/nhựa
 
 [tchome.vn]
 match = 20.0%%
@@ -42,14 +42,14 @@ title = Chiếu Nhựa Bền Đẹp, Giá Sốc, Bán Chạy Nhất
 url = https://www.sendo.vn/chieu-nhua.htm
 
 [www.facebook.com]
-match = -20.0%%
-title = Chiếu nhựa ( đơn + gấp) Made in Viêt Nam
-url = https://www.facebook.com/media/set/?set=a.774846209209040.1073741830.763563843670610&type=3
+match = 63.2%%
+title = Chiếu Nhựa Thái Lan
+url = https://www.facebook.com/chieunhuathailan/
 
 [www.diepxuan.com]
 match = 15.0%%
-title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
+title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [www.lazada.vn]
 match = 10.0%%
