--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-16 17:33:51
+lastsearch = 2024-07-16 19:55:16
 
 [www.lazada.vn]
 match = -88.9%%
@@ -17,9 +17,9 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -138.9%%
-title = Nguoi Viet Colorado | 💥 NEM CUA BỂ VUÔNG SIÊU CHẤT ...
-url = https://m.facebook.com/groups/213134222458659/posts/1913588515746546/
+match = -177.8%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
+url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [thegioinem.com]
 match = -155.6%%
@@ -27,9 +27,9 @@ title = TOP 12 thương hiệu nệm cao su khuyến mãi, giá rẻ tại ...
 url = https://thegioinem.com/top-12-thuong-hieu-nem-cao-su-khuyen-mai-gia-re-tai-thegioinem-com.html
 
 [www.facebook.com]
-match = -16.7%%
-title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
-url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
+match = -88.9%%
+title = NEM Fashion - 💥 𝐍𝐄𝐖 𝐘𝐄𝐀𝐑 𝐒𝐀𝐋𝐄 𝟓𝟎%% 💥 𝐓𝐎𝐀̀𝐍 𝐁𝐎̣̂ ...
+url = https://www.facebook.com/nemfashion.official/posts/-𝐍𝐄𝐖-𝐘𝐄𝐀𝐑-𝐒𝐀𝐋𝐄-𝟓𝟎-𝐓𝐎𝐀̀𝐍-𝐁𝐎̣̂-𝐒𝐀̉𝐍-𝐏𝐇𝐀̂̉𝐌-𝐓𝐇𝐔-đ𝐎̂𝐍𝐆với-mong-muốn-mang-tới-một-năm/766864658809567/
 
 [eva.vn]
 match = -150.0%%
