--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-16 13:52:49
+lastsearch = 2024-07-16 19:58:30
 
 [changagoidemtamhao.com]
 match = -5.0%%
-title = Bộ Chăn Ga Gối PYEODA LTT
-url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-ltt
+title = Bộ Chăn Ga Gối PYEODA LSP
+url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-lsp
 
 [demsingapore.com]
 match = -70.0%%
@@ -62,9 +62,9 @@ title = PYEODA
 url = http://noithatbichthuy.com/pyeoda
 
 [changagoidemphuongbac.com]
-match = -70.0%%
-title = Chăn hè cotton Pyeoda - Chăn ga gối đệm Phương Bắc
-url = https://changagoidemphuongbac.com/chan-he-cotton-pyeoda/
+match = -100.0%%
+title = Nệm cao su Kym Đan Massage - Chăn ga gối đệm Phương Bắc
+url = https://changagoidemphuongbac.com/nem-cao-su-kym-dan-massage?yith_wcan=1&min_price=3000000&max_price=5000000&product_cat=bo-chan-ga-phu&query_type_loai=and&filter_loai=chan&query_type_thuong-hieu=and&filter_thuong-hieu=lasante&query_type_kich-thuoc=and&filter_kich-thuoc=200x220cm,160x200cm,180x200cm
 
 [thuongtruong.com.vn]
 match = -125.0%%
