CI images update

--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-16 17:34:34
+lastsearch = 2024-07-16 20:15:05
 
 [shopee.vn]
 match = -8.0%%
@@ -117,9 +117,9 @@ title = Ông Trump đã đi chơi golf chưa đầy 24 giờ sau khi bị ám ..
 url = https://trithucvn.co/the-gioi/ong-trump-da-di-choi-golf-chua-day-24-gio-sau-khi-bi-am-sat-hut.html
 
 [www.klook.com]
-match = -44.0%%
-title = 17 Cảnh Đẹp Đài Loan Nổi Tiếng Bạn Không Nên Bỏ Lỡ
-url = https://www.klook.com/vi/blog/canh-dep-dai-loan/
+match = -12.0%%
+title = 15 Món Đặc Sản Đài Loan Nhất Định Phải Thử
+url = https://www.klook.com/vi/blog/dac-san-dai-loan/
 
 [www.dkn.tv]
 match = -76.0%%
@@ -177,9 +177,9 @@ title = Miền Trung thu hút khách du lịch từ Đài Loan
 url = https://thoibaonganhang.vn/mien-trung-thu-hut-khach-du-lich-tu-dai-loan-152850.html
 
 [fw.wda.gov.tw]
-match = -48.0%%
-title = Trang web Quyền lợi lao động của người nước ngoài
-url = https://fw.wda.gov.tw/wda-employer/home/index?locale=vi
+match = -76.0%%
+title = Video Clip -Chuyên mục tuyên truyền-Trang web Quyền ...
+url = https://fw.wda.gov.tw/wda-employer/home/video?locale=vi
 
 [www.instagram.com]
 match = -80.0%%
