--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-16 13:45:39
+lastsearch = 2024-07-16 20:14:43
 
 [demtot.com]
 match = 4.8%%
-title = Tag Archives: đệm lò xo
-url = https://demtot.com/tag/dem-lo-xo/
+title = Đệm Lò Xo Túi Màu Cân Bằng Nhiệt
+url = https://demtot.com/dem-lo-xo-adaptive-tui-mau/
 
 [tuananh.vn]
 match = 52.4%%
@@ -48,8 +48,8 @@ url = https://www.diepxuan.com/nem-tuan-anh.html
 
 [sieuthidemonline.vn]
 match = -66.7%%
-title = Nệm lò xo giàn Techwood cao cấp - Bảng giá khuyến mại!
-url = https://sieuthidemonline.vn/bang-gia-nem-lo-xo-gian-techwood/
+title = Nệm lò xo túi Acnes cao cấp - Bảng giá khuyến mại!
+url = https://sieuthidemonline.vn/nem-lo-xo-tui-acnes/
 
 [demsingapore.com]
 match = 19.0%%
