CI images update

--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-16 18:32:35
+lastsearch = 2024-07-16 20:51:10
 
 [vinatools.com]
 match = -140.0%%
@@ -22,9 +22,9 @@ title = Hướng dẫn đi lại tại sân bay Nội Bài
 url = https://noibaiairport.vn/Transportation-to-and-from-Noibai-International-Airport-nid260.html
 
 [batdongsan.com.vn]
-match = -226.7%%
-title = ban nha duong pham van chieu phuong 16 go vap - Bán - tags
-url = https://batdongsan.com.vn/tags/ban/ban-nha-duong-pham-van-chieu-phuong-16-go-vap?price=7&areas=7
+match = -213.3%%
+title = Bán đất Himlam Lương Định Của, P. An Khánh Q2, MT D2 ...
+url = https://batdongsan.com.vn/ban-dat-duong-d2-phuong-an-khanh/b-himlam-luong-dinh-cua-p-khh-q2-mt-16m-4x23-15-8ty-0906997966-pr34187773
 
 [m.facebook.com]
 match = -193.3%%
@@ -49,7 +49,7 @@ url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 [www.facebook.com]
 match = 0.0%%
 title = Black Kingdom - D2
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=ml_IN
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=hi_IN
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -177,9 +177,9 @@ title = Đi ăn ốc Singapore ở khu D2 Bình Thạnh với tui, rổ rá bìn
 url = https://www.tiktok.com/@hi.vidayyy/video/7308207874562395393
 
 [www.lazada.vn]
-match = -153.3%%
-title = Chiếu Lác May Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-lac-may/
+match = -146.7%%
+title = [NGẪU NHIÊN] Dụng cụ nhảy dây có đếm số vòng D216
+url = https://www.lazada.vn/products/ngau-nhien-dung-cu-nhay-day-co-dem-so-vong-d216-rikob-shop-i2433883429.html
 
 [shopee.vn]
 match = -226.7%%
