--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-16 18:45:03
+lastsearch = 2024-07-16 20:49:58
 
 [chieutruc.info]
 match = -63.6%%
@@ -22,9 +22,9 @@ title = CAPCUT VIỆT NAM | Mn ơi giúp e vs
 url = https://m.facebook.com/groups/400243538122762/posts/989653909181719/
 
 [nhathuoclongchau.com.vn]
-match = -90.9%%
-title = Cách nhìn hình siêu âm làm sao biết trai hay gái chính xác
-url = https://nhathuoclongchau.com.vn/bai-viet/cach-nhin-hinh-sieu-am-lam-sao-biet-trai-hay-gai-chinh-xac-nhat-70617.html
+match = -104.5%%
+title = Mang thai 18 tuần nặng bao nhiêu cân để bé phát triển tốt?
+url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html
 
 [www.vinmec.com]
 match = -18.2%%
