--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-16 19:54:56
+lastsearch = 2024-07-16 20:50:32
 
 [shopee.vn]
 match = 0.0%%
@@ -17,14 +17,14 @@ title = Chiếu điều hòa có gối 16
 url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 
 [goni.vn]
-match = -50.0%%
-title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa không
-url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
+match = 4.2%%
+title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
+url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = -25.0%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = -12.5%%
+title = Chiếu điều hòa Nhật Bản Nekio Viscose màu xanh
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-viscose-mau-xanh.html
 
 [giadunganhvan.vn]
 match = 70.8%%
@@ -47,9 +47,9 @@ title = CHIẾU ĐIỀU HÒA NỘI ĐỊA NANJIREN 11-18
 url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 
 [suongtuyet.com]
-match = 4.2%%
-title = có nên sử dụng chiếu điều hòa không?
-url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
+match = -41.7%%
+title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
+url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [www.lazada.vn]
 match = 8.3%%
