--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-07-16 19:56:41
+lastsearch = 2024-07-16 20:50:59
 
 [www.maihuyencorp.com]
-match = -20.0%%
-title = Mai Huyền - Chiếu nhựa cao cấp - Hanoi
-url = https://www.maihuyencorp.com/
+match = -85.0%%
+title = Cửa hàng chiếu nhựa, mành, rèm, thảm uy tin tại Hà Nội
+url = https://www.maihuyencorp.com/shop
 
 [shopee.vn]
 match = -70.0%%
@@ -48,8 +48,8 @@ url = https://www.facebook.com/chieunhuathailan/
 
 [www.diepxuan.com]
 match = 15.0%%
-title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [www.lazada.vn]
 match = 10.0%%
