--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-16 17:52:20
+lastsearch = 2024-07-16 20:44:25
 
 [demxanh.com]
 match = -135.3%%
@@ -32,9 +32,9 @@ title = Bảng Giá tháng 4-5/2024 | Chiếu Trúc Hạt Đen | GIÁ TỐT ✅
 url = https://thegioidemviet.vn/chieu-truc-hat-den/
 
 [shopee.vn]
-match = -135.3%%
-title = Chiếu Trúc hạt hồ lô đen Không Viền mắt nhỏ cao cấp ...
-url = https://shopee.vn/Chiếu-Trúc-hạt-hồ-lô-đen-Không-Viền-mắt-nhỏ-cao-cấp-thoáng-mát-BH-1-năm-(Ảnh-Thật)-i.8398725.5342652017
+match = -105.9%%
+title = Chiếu trúc hạt đen cao cấp, bền , đẹp, Hàng Loại I
+url = https://shopee.vn/Chiếu-trúc-hạt-đen-cao-cấp-bền-đẹp-Hàng-Loại-I-i.296736591.9319890080
 
 [vongxepsaigon.vn]
 match = -188.2%%
