--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-16 20:00:42
+lastsearch = 2024-07-16 20:50:50
 
 [www.tui.co.uk]
-match = -33.3%%
-title = Holiday Types 2024/25
-url = https://www.tui.co.uk/holidays
+match = -250.0%%
+title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
+url = https://www.tui.co.uk/
 
 [uk.trip.com]
 match = 0.0%%
@@ -42,8 +42,8 @@ title = TUI commands logging??? - Forums
 url = https://www.cfd-online.com/Forums/fluent/45792-tui-commands-logging.html
 
 [www.reddit.com]
-match = -208.3%%
-title = TUI Fly Belgium 737 flying in North America?
+match = -333.3%%
+title = TUI Fly Belgium 737 flying in North America? : r/flightradar24
 url = https://www.reddit.com/r/flightradar24/comments/19daoc4/tui_fly_belgium_737_flying_in_north_america/
 
 [www.travelgossip.co.uk]
@@ -112,9 +112,9 @@ title = All Bags | DeMellier | Shop now
 url = https://demellierlondon.com/collections/all-bags
 
 [www.telegraph.co.uk]
-match = -316.7%%
-title = The US Marines' China-fighting, island hopping Q Ship ...
-url = https://www.telegraph.co.uk/news/2024/07/07/us-marines-navy-lsm-island-war-china-amphibious-ships/
+match = -266.7%%
+title = Britain to be fastest growing major European economy
+url = https://www.telegraph.co.uk/business/2024/07/16/fste-100-markets-live-news-labour-economic-pledges/
 
 [www.oneworld.com]
 match = -283.3%%
@@ -167,9 +167,9 @@ title = Tour giant TUI expects bright summer | REUTERS
 url = https://www.youtube.com/watch?v=cToNcnSxFgs
 
 [www.thenaturaladventure.com]
-match = -325.0%%
-title = Camino Portugues Last 100km Relaxed: Tui to Santiago in ...
-url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-relaxed-tui-to-santiago-in-11-days/
+match = -283.3%%
+title = Camino Portugues Last 100km: Tui to Santiago in 8 Days
+url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-tui-to-santiago-in-8-days/
 
 [www.tripadvisor.com]
 match = -275.0%%
