--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-16 09:08:23
+lastsearch = 2024-07-16 20:46:47
 
 [www.walmart.com]
 match = -162.5%%
@@ -124,7 +124,7 @@ url = https://www.sephora.com/ca/en/product/huda-beauty-lip-contour-pencil-2-0-P
 [www.tui.co.uk]
 match = 0.0%%
 title = 
-url = https://www.tui.co.uk/destinations/faq/before-you-go/booking-your-holiday
+url = https://www.tui.co.uk/holidays/tui-blue
 
 [www.dailymail.co.uk]
 match = -218.8%%
@@ -150,4 +150,9 @@ url = http://kllibrary.dbkl.gov.my/client/en_US/pkl/search/results.displaypanel.
 match = -118.8%%
 title = Personal Color🖍️ | Bộ sưu tập do Annie🥦 đăng
 url = https://www.lemon8-app.com/an_nie/7208139846819316225?region=vn
+
+[globalmaxhosting.com]
+match = -212.5%%
+title = multiple return in python - bolsa pequena da louis vuitton
+url = https://globalmaxhosting.com/blogs/tyonogkq-277//
 
