CI images update

--- a/images/bo-ga-chun-eve1-160x200/config.ini
+++ b/images/bo-ga-chun-eve1-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-eve1-160x200.html
 lastopen = 2024-06-07 00:50:34
 
 [search]
-lastsearch = 2024-07-16 20:14:00
+lastsearch = 2024-07-16 21:13:13
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -38,8 +38,8 @@ url = https://www.mountainproject.com/forum/topic/122972146/new-shoe-reccomendat
 
 [www.youtube.com]
 match = -100.0%%
-title = GRITTI GOSSIP NIGHT | BONBON POP | LV ON THE BEACH ...
-url = https://www.youtube.com/watch?v=BWDU_he2NKI
+title = Is This REALLY The Same As La Nuit Bleu Electrique ...
+url = https://www.youtube.com/watch?v=iHWCPIKCOI8
 
 [www.instagram.com]
 match = -139.1%%
