--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-16 20:00:30
+lastsearch = 2024-07-16 21:15:44
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = BỊ THU HỒI THẺ XANH KHI NHẬP CẢNH TRỞ LẠI MỸ và
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -78.6%%
-title = Green Screen with other Shorts! 🟩🤳
-url = https://www.youtube.com/watch?v=Q8IeXTDZ734
+match = -200.0%%
+title = FIX: VIDEO DXGKRNL FATAL ERROR in Windows 10/11 ...
+url = https://www.youtube.com/watch?v=7yEnuxJqQKg
 
 [www.reddit.com]
 match = -64.3%%
