--- a/images/nem-diamold-re-200x220x09/config.ini
+++ b/images/nem-diamold-re-200x220x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-diamold-re-200x220x09.html
 lastopen = 2024-06-10 11:11:36
 
 [search]
-lastsearch = 2024-07-16 20:00:09
+lastsearch = 2024-07-16 21:17:12
 
 [www.youtube.com]
 match = -80.0%%
@@ -57,9 +57,9 @@ title = 2.09 Carat round diamond
 url = https://www.bluenile.com/diamond-details/19659020?cur=
 
 [forum.cartridgecollectors.org]
-match = -8.0%%
-title = 9x19 (Sintered Iron) dnh St+ 10 44
-url = https://forum.cartridgecollectors.org/t/9x19-sintered-iron-dnh-st-10-44/43104
+match = 4.0%%
+title = 20x102 German MP and DM61
+url = https://forum.cartridgecollectors.org/t/20x102-german-mp-and-dm61/39608
 
 [pinside.com]
 match = -60.0%%
@@ -90,4 +90,9 @@ url = https://thebackshed.org/forum/ViewTopic_mobile.php?TID=8542&P=7
 match = -12.0%%
 title = Diamond tester recommendations???
 url = https://www.reddit.com/r/Diamonds/comments/17zlsxe/diamond_tester_recommendations/
+
+[www.tapeheads.net]
+match = -12.0%%
+title = pinch roller right pioneer ct-a9x
+url = https://www.tapeheads.net/threads/pinch-roller-right-pioneer-ct-a9x.65695/
 
