--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-07-16 16:52:37
+lastsearch = 2024-07-16 21:19:46
 
 [demxanh.com]
 match = -60.9%%
@@ -17,9 +17,9 @@ title = Chiếu trúc tre chiếu cao bằng tây bắc nhiều cỡ đủ size 
 url = https://www.lazada.vn/products/chieu-truc-tre-chieu-cao-bang-tay-bac-nhieu-co-du-size-tam-hoa-i1312559243.html
 
 [shopee.vn]
-match = 43.5%%
-title = Chiếu trúc cao bằng 1.4m x 1.95
-url = https://shopee.vn/Chiếu-trúc-cao-bằng-1.4m-x-1.95-i.79170238.1321077017
+match = -69.6%%
+title = Chiếu trúc cây cao bằng sịn hàng loại 1 (chiếu 2x2.2 liên ...
+url = https://shopee.vn/Chiếu-trúc-cây-cao-bằng-sịn-hàng-loại-1-(chiếu-2x2.2-liên-hệ-với-shop-)-i.68883759.1152873373
 
 [lombom.com]
 match = -60.9%%
