--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-16 19:53:38
+lastsearch = 2024-07-16 21:15:24
 
 [shopee.vn]
 match = 25.0%%
@@ -200,4 +200,9 @@ url = https://thitruongtaichinh.kinhtedothi.vn/chung-khoan/chung-khoan-127-thi-t
 match = -218.8%%
 title = Cây lác (cây cói): Ý nghĩa, hình ảnh, cách trồng, chăm sóc ...
 url = https://baodaknong.vn/cay-lac-cay-coi-y-nghia-hinh-anh-cach-trong-cham-soc-tai-nha-171408.html
+
+[baocantho.com.vn]
+match = -12.5%%
+title = Nghề dệt chiếu ở Cần Thơ
+url = https://baocantho.com.vn/nghe-det-chieu-o-can-tho-a145848.html
 
