--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-16 14:28:04
+lastsearch = 2024-07-16 21:20:33
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -17,9 +17,9 @@ title = Davina Xanh (4/4/2024) - Athlete Awards
 url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
-match = 0.0%%
-title = Green Book (2018)
-url = https://www.imdb.com/title/tt6966692/
+match = -14.3%%
+title = The Jungle Book (2016)
+url = https://www.imdb.com/title/tt3040964/
 
 [www.etsy.com]
 match = 35.7%%
@@ -112,9 +112,9 @@ title = GREEN TEA - Uses, Side Effects, and More
 url = https://www.webmd.com/vitamins/ai/ingredientmono-960/green-tea
 
 [en.wikipedia.org]
-match = 8.3%%
-title = Greenwashing
-url = https://en.wikipedia.org/wiki/Greenwashing
+match = -14.3%%
+title = Iranian Green Movement
+url = https://en.wikipedia.org/wiki/Iranian_Green_Movement
 
 [www.yeastdriven.com]
 match = -114.3%%
@@ -302,8 +302,8 @@ title = Resansman 16,Nombres 16,Numbers 16 VKF;BDS;KJV
 url = https://www.biblegateway.com/passage/?search=Resansman 16,Nombres 16,Numbers 16&version=VKF;BDS;KJV;NKJV
 
 [www.bernzomatic.com]
-match = -242.9%%
-title = An ninh Bến Tre Ký sự Bến Tre Xanh Thể thao bến treXem ...
+match = -257.1%%
+title = An ninh Bến Tre Ký sự Bến Tre Xanh Thể thao bến treXem truyề
 url = https://www.bernzomatic.com/appTehRq6feFR
 
 [dienmaycholon.com]
