--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-16 12:18:00
+lastsearch = 2024-07-16 21:19:22
 
 [www.bible.com]
 match = -88.2%%
@@ -17,9 +17,9 @@ title = Exodus 1-40 - Mizo BIBle - WordPress.com
 url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
 
 [www.biblegateway.com]
-match = -58.8%%
-title = Matthew 20:22-23 King James Version
-url = https://www.biblegateway.com/passage/?search=Matthew 20:22-23&version=KJV
+match = -82.4%%
+title = John 20:22 New International Version
+url = https://www.biblegateway.com/passage/?search=John 20:22&version=NIV
 
 [mungchup.com]
 match = -100.0%%
@@ -47,8 +47,8 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70AIFITTINGS.pdf
 
 [www.bibleref.com]
-match = 0.0%%
-title = 
+match = -23.5%%
+title = What does Matthew 20:22 mean?
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
@@ -165,4 +165,9 @@ url = https://wol.jw.org/tpi/wol/b/r75/lp-mp/bi7/40/22
 match = -170.6%%
 title = Sindiran Djarot ke Jokowi: Baru Kali Ini Anak, Mantu ...
 url = https://www.detik.com/bali/berita/d-7434830/sindiran-djarot-ke-jokowi-baru-kali-ini-anak-mantu-mungkin-cucu-disiapkan
+
+[roysreflections.com]
+match = 0.0%%
+title = 
+url = https://roysreflections.com/2017/02/06/matthew-2021-28-part-1-the-cup/
 
