--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-16 20:46:47
+lastsearch = 2024-07-16 21:15:35
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -156.2%%
-title = Gloss for life - #beautytok - #hudabeauty - #lip
-url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
+match = -231.2%%
+title = Who remembers this hack? Using a wet velour puff to apply ...
+url = https://www.tiktok.com/@hudabeauty/video/7316247408676080942
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -62,9 +62,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.instagram.com]
-match = -237.5%%
-title = Meliá Hotels & Resorts | It's time to enjoy a warm dream resort ...
-url = https://www.instagram.com/meliahtlresorts/p/CsQkNaANnaw/
+match = -33.3%%
+title = Instagram
+url = https://www.instagram.com/daydreamingwinter/reel/C5m8xjlOPBA/
 
 [demxanh.com]
 match = -156.2%%
